@@ -1,6 +1,7 @@
 v 1.3.2
 	#98 - Add more field types.
-			- Dropdown field type
+			- Dropdown field type.
+			- Multiselect field type
 	#101 - Size of a request header field exceeds server limit for datatables.
 	#97 - Add new method and functionality - unset_jquery_ui
 	#46 - Supporting IE7.
